--- a/app/templates/pitch.html
+++ b/app/templates/pitch.html
@@ -34,11 +34,11 @@
         <hr>
         
         {% if comments %}
-            {{macro.displayComments(comments)}}
+            {{macro.displayComments(comment)}}
         {% else %}
             <h3 class="text-center">This Pitch has no comments</h3>
 
-            <a class="btn btn-success btn-lg text-center" href="/movie/review/new/{{movie.id}}">Write a new review</a>
+            <a class="btn btn-success btn-lg text-center" href="Pitch.query.get(id)">Comment on this pitch</a>
         {% endif %}
     </div>
 
