--- a/app/templates/pitch.html
+++ b/app/templates/pitch.html
@@ -20,8 +20,8 @@
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details">
             <h3>{{ pitch.title }}</h3>
 
-            <p class="overview"> {{ pitch.id }}</p>
-            <p class="overview"> {{ pitch.date_created }}</p>
+            <p class="pitch_id"> {{ pitch.id }}</p>
+            <p class="date_created"> {{ pitch.date_created }}</p>
             <p class="ratings"> <b> {{ pitch.vote_count }}</b> - <i>{{ movie.vote_count}} votes </i> </p>
         
 
