--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,34 @@
+{% extends 'base.html' %}
+{% import 'macros.html' as macro%}
 
 
-<h2>Welcome to Your Favorite Pitches Website</h2>
+<!--Styles block-->
 
+{% block styles %}
+    {{super()}}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% endblock %}
+
+
+<!-- Content block -->
+{% block content %}
+
+<h2>Pitch Your Pitch</h2>
+
+<!--Search block-->
+<div class="container">
+    <form>
+        <input type="text" name="pitch_query" placeholder="search for a pitch" class="form-control">
+        <input type="submit" value="Submit" class="btn btn-default">
+    </form>
+</div>
+
+<!-- Popular movie -->
+<h3> Interviews</h3>
+<ul>
+    {{ macro.displayPitchList(pitch_list)}}
+</ul>
+
+
+
+{% endblock%}
