added the registration form and rendered it to the navbar

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -19,6 +19,7 @@
                 <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
                 {% else %}
                 <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
+                <li><a href="{{url_for('auth.register')}}}">Register</a></li>
                 {%endif%}
               </ul>
         </div>
