--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -2,15 +2,40 @@
 
     {% for pitch in pitch_list %}
         <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 movie-card">
-            <li class="text-center">
-                <a href="/pitch/{{pitch.id}}">
-                    {{ pitch.title|truncate(10)}}</a>
+            {% if pitch.user.profile_pic_path %}
+            <p><a href="/user/{{pitch.user.username}}&{{pitch.user.id}}">{{pitch.user.username}}</a></p>
+
+            {% else %}
+            <p><a href="/user/{{pitch.user.username}}&{{pitch.user.id}}">{{pitch.user.username}}</a></p>
+            {% endif %}
+
+
+            <p>{{pitch.pitch_content}}</p>
+            <p class="small"> Category: {{pitch.category}} </p>
+            <hr>
+            <ul class="list-inline">
+                <li class="list-inline-item">
+                <a href="/pitch/{{pitch.id}}">Create Comment</a>
+                </li>
+                <li class="list-inline-item">
+                <a class="btn btn-primary" href="{{url_for('main.like',id=pitch.id)}}">
+                    <i class="fa fa-thumbs-up fa-1x"></i>
+                </a>
             </li>
+            <li class="list-inline-item">
+                <a class="btn btn-warning" href="{{url_for('main.dislike',id=pitch.id)}}">
+                    <i class="fa fa-thumbs-down fa-1x"></i>
+                </a>
+            </li>
+        </ul>
         </div>
 
     {% endfor %}
 
 {% endmacro %}
+
+
+
 
 
 <!-- Displaying comment macro -->
@@ -21,4 +46,48 @@
             <p> {{comment.comment | truncate(30)}} </p>
         </div>
     {% endfor %}
+
+
+
+
+
+    {% macro displayCategory(my_categories) %} 
+
+    {% for category in my_category %}
+    <div class="col-md-12 pitches">
+        <p>
+            <a href="/user/{{category.user.username}}&{{category.user.id}}">{{category.user.username}}</a>
+        </p>
+        <p>{{category.pitch}}</p>
+        <p class="small"> Category: {{category.category}} </p>
+        <hr>
+        <p>{{pitch.pitch}}</p>
+        <p class="small"> Pitches: {{pitch.pitch}} </p>
+        <ul class="list-inline">
+            <li class="list-inline-item">
+                <a href="/pitch/{{category.id}}">Add Comment</a>
+            </li>
+            <li class="list-inline-item">
+                <a class="btn btn-primary" href="{{url_for('main.like',id=category.id)}}">
+                    <i class="fa fa-thumbs-up fa-1x"></i>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a class="btn btn-warning" href="{{url_for('main.dislike',id=category.id)}}">
+                <h3 class="card-title">{{ pitch.user.username }}</h3>
+                </h4>
+                <p class="pitch-content">{{pitch.actual_pitch}}</p>
+    
+                <br>
+    
+                <p class="pitch-content">{{pitch.actual_pitch}}</p>
+                <hr>
+                    <i class="fa fa-thumbs-down fa-1x"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
+    {% endfor %} 
+    {% endmacro %} 
+
 {% endmacro %}
