--- a/app/templates/new_comment.html
+++ b/app/templates/new_comment.html
@@ -1,15 +1,12 @@
-{% extends 'base.html' %}
-{% import "bootstrap/wtf.html" as wtf %}
+{% import 'macros.html' as macro%}
 
 {% block content %}
 
-    <div class="container">
-        <div class="col-md-8" class="responsive">
-            {{pitch.title}}
-        </div>
-        <div class="col-md-4">
-            {{ wtf.quick_form(comments_form) }}
-            
-        </div>
-    </div>
-{% endblock %}
+<div class="container">
+	<div class="row">
+		macro displayComments(comment_list)
+	</div>
+</div>	
+
+
+{% endblock%}
