--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,12 @@
 {% extends 'bootstrap/base.html' %}
 
 <!-- Navbar block  -->
+{% block styles %}
+    {{super()}}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/pitch.css')}}">
+{% endblock %}
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
 {% block navbar %}
     {% include 'navbar.html' %}
 {% endblock %}
