--- a/app/templates/new_comment.html
+++ b/app/templates/new_comment.html
@@ -1,12 +1,37 @@
 {% import 'macros.html' as macro%}
+{% extends 'base.html'%}
+{% import 'bootstrap/wtf.html' as wtf%}
 
 {% block content %}
 
-<div class="container">
-	<div class="row">
-		macro displayComments(comment_list)
-	</div>
-</div>	
+{{wtf.quick_form(comment_form)}}
+{% for pitch in pitchs %}
 
+<div class="col-md-8 offset-md-2" style="margin-left:15%;">
+
+
+<div class="panel panel-default">
+    <div class="table-container">
+        <table class="table table-filter">
+            <tbody>
+                <tr data-status="pagado">
+                    <td>
+                        <div class="media">
+                            <div class="media-body">
+                                <span class="media-meta pull-right">{{ pitch.date_created }}</span>
+                                <h4 class="title">{{ pitch.comments }}..
+                                </h4>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                
+            </tbody>
+        </table>
+    </div>
+</div>
+</div>
+
+{%endfor%}
 
 {% endblock%}
