--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -27,7 +27,7 @@
     {% endif %}
 
         {% if user == current_user %}
-    <form  action="{{url_for('main.update_pic',uname=user.username)}}" method="post" enctype = "multipart/form-data">
+    <form  action="{{url_for('main.update_profile',uname=user.username)}}" method="post" enctype = "multipart/form-data">
 
       <input type="file"  name="photo" class="form-control" required>
       <input type="submit">
